# cardgame

./: Cargo.toml  test-rules.cgr
src/: errors.rs  game.rs  game_events.rs  lib.rs  main.rs
src/server/: game.rs  player.rs
src/web/: client.rs  error.rs  lib.rs  main.rs  mod.rs  proto.rs  web_strings.rs
