[package]
name = "cardgame"
version = "0.1.0"
authors = ["michael", "ryan"]
edition = "2018"
default-run = "cardgame"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston2d-graphics = "0.37.0"
piston = "0.52.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.74.0"
warp = "0.2.5"
async-std = "1.6.5"
structopt = "0.3.13"
# Necessary for our protocol trait implementations
async-trait = "0.1.36"

[[bin]]
name = "server"
path = "src/web/main.rs"
